always show tree close button even on narrow screens - fixes #8352

--- a/web/src/tree/_TreeHeader.scss
+++ b/web/src/tree/_TreeHeader.scss
@@ -16,12 +16,6 @@
         text-overflow: ellipsis;
         white-space: nowrap;
     }
-
-    &__close-button {
-        @media (max-width: $media-md) {
-            display: none;
-        }
-    }
 }
 
 .theme-light {
